Simplify checks in model; small fixes